<resources>
    <string name="app_name">Soy IMEI</string>

    <string name="hint_matricula">Matrícula</string>
    <string name="hint_password">Contraseña</string>

    <string name="entrar">ENTRAR</string>
    <string name="no_eres_alumno">Si aún no eres alumno</string>
    <string name="presiona_aqui">PRESIONA AQUÍ</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="msg_operacion_exitosa">Operación exitosa</string>
    <string name="msg_usuario_no_valido">Usuario no valido.</string>
    <string name="msg_dialog_titulo">Grupo Educativo IMEI</string>
...
